# VocExcel

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.adoc  README.rst  Taskfile.yml  VocExcel-template-TEST-induration-style.xlsx  VocExcel-template-broken.xlsx  VocExcel-template.xlsx  deprecated_setup.py  main.py  pyproject.toml  requirements.txt  setup.py  testing.py  vocab-invalid.ttl
.github/workflows/: create-release.yml  release-created.yml  release.yml  test.yml
templates/: VocExcel-template-041.xlsx  VocExcel-template-050.xlsx  VocExcel-template-060.xlsx  VocExcel-template-062.xlsx  VocExcel-template-063.xlsx  VocExcel-template-070.xlsx  VocExcel-template_030.xlsx  VocExcel-template_040.xlsx  VocExcel-template_041.xlsx  VocExcel-template_042.xlsx  VocExcel-template_043.xlsx  VocExcel-template_050.xlsx
tests/: 030_eg-invalid.xlsx  030_eg-invalid2.xlsx  030_eg-languages-valid.xlsx  030_eg-valid.xlsx  040_complex_invalid.xlsx  040_complex_valid.xlsx  040_exhaustive_comparison.ttl  040_exhaustive_example.xlsx  040_exhaustive_example_perfect_output.ttl  040_minimal.xlsx  040_minimal_comparison.ttl  040_minimal_example.xlsx  040_minimal_example_perfect_output.ttl  040_simple.xlsx  040_simple_valid.xlsx  041_exhaustive_comparison.ttl  041_exhaustive_example.xlsx  041_exhaustive_example_perfect_output.ttl  041_simple_valid.xlsx  042_simple_example.xlsx  043_exhaustive.xlsx  043_exhaustive_example.xlsx  043_prefix_test.xlsx  043_simple_valid.xlsx  050_simple.xlsx  050_simple2.xlsx  050_simple_invalid.xlsx  050_simple_invalid2.xlsx  050_simple_invalid3.xlsx  060_simple.xlsx  060_simple2.xlsx  060_simple2_i.xlsx  060_simple3_i.xlsx  062_simple1.xlsx  063_simple1.xlsx  070_simple1.xlsx  README.md  eg-invalid.xlsx  eg-invalid2.xlsx  eg-languages-valid.xlsx  (+18 more)
tests/web/: conftest.py  test_convert.py  test_format.py  test_version.py
vocexcel/: __main__.py  blank.xlsx  blank_043.xlsx  convert.py  convert_021.py  convert_030.py  convert_040.py  convert_041.py  convert_043.py  convert_050.py  convert_060.py  convert_062.py  convert_063.py  convert_070.py  convert_google_sheets.py  convert_gsheets.py  creds.json  models.py  profiles.py  settings.py  utils.py  validator.vocpub.ttl  vocpub-46.ttl
vocexcel-ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
vocexcel-ui/src/: App.vue  main.ts
vocexcel/web/: app.py  (+3 more)
(+5 files in other folders)
