[tool.poetry]
name = "vocexcel"
version = "0.1.0"
description = ""
authors = ["peterphilips <peter.philips@surroundaustralia.com>"]

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = "^3.0.9"
rdflib = "^6.1.1"
pydantic = "^1.9.0"
pyshacl = "^0.18.1"
dateutils = "^0.6.12"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

